add directive page:example codes for some directives

--- a/demo/templates/demo/index.html
+++ b/demo/templates/demo/index.html
@@ -8,14 +8,15 @@
     <script src="/static/js/app.js"></script>
     <script src="/static/js/DemoController.js"></script>
     <script src="/static/js/BasicController.js"></script>
+    <script src="/static/js/DirectiveController.js"></script>
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
 
 </head>
 <body>
 {% verbatim %}
 <div class="container" ng-app="MyModel">
-    <a href="#/basic">basic</a>
-    <a href="#/route2">URL2</a>
+    <a href="#/basic"> basic</a>
+    <a href="#/directive"> directive</a>
     <div ng-view>
     </div>
 </div>
