finish directive page and add custom directive page

--- a/demo/templates/demo/index.html
+++ b/demo/templates/demo/index.html
@@ -9,6 +9,7 @@
     <script src="/static/js/DemoController.js"></script>
     <script src="/static/js/BasicController.js"></script>
     <script src="/static/js/DirectiveController.js"></script>
+    <script src="/static/js/CustomDirectiveController.js"></script>
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
 
 </head>
@@ -17,6 +18,7 @@
 <div class="container" ng-app="MyModel">
     <a href="#/basic"> basic</a>
     <a href="#/directive"> directive</a>
+    <a href="#/custom-directive"> Custom Directive</a>
     <div ng-view>
     </div>
 </div>
