modify custom directive page

--- a/demo/templates/demo/index.html
+++ b/demo/templates/demo/index.html
@@ -10,6 +10,7 @@
     <script src="/static/js/BasicController.js"></script>
     <script src="/static/js/DirectiveController.js"></script>
     <script src="/static/js/CustomDirectiveController.js"></script>
+    <script src="/static/js/directives.js"></script>
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
 
 </head>
