--- a/demo/templates/demo/custom.html
+++ b/demo/templates/demo/custom.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    custom page
-</body>
-</html>
+{% verbatim %}
+Custom Directive Page
+<hr>
+<helloworld></helloworld>
+<h1 helloworld>Hi, how are you</h1>
+{% endverbatim %}
